一些技术性变更，优化