@@ -3,9 +3,7 @@ package com.wenkrang.boatfly.command;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
-import org.bukkit.command.TabExecutor;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -14,12 +12,9 @@ public class BfTabComplete implements TabCompleter {
     //用于补全命令
     @Override
     public List<String> onTabComplete(CommandSender commandSender, Command command, String s, String[] strings) {
-        switch (strings.length) {
-            case 1:
-                //第一项补全
-                return Arrays.asList("help", "getbook","upgrade");
-            default:
-                return Collections.emptyList();
+        if (strings.length == 1) {//第一项补全
+            return List.of("help", "getbook", "upgrade");
         }
+        return Collections.emptyList();
     }
 }
